<resources>
    <string name="app_name">Change your font size</string>
    <string name="result">Hello World!</string>
    <string name="sp">16sp</string>
    <string name="editText">Hello World!</string>
    <string name="radioButton1">12</string>
    <string name="radioButton2">16</string>
    <string name="radioButton3">26</string>
    <string name="radioButton4">32</string>
    <string name="radioButton">None</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="none">None</string>
    <string name="popup">Please fill in all fields</string>
</resources>